[tool.poetry]
name = "rules-extraction"
version = "0.0.0"
description = "Rules extraction for eXplainable AI"
authors = ["Arthur Babey <arthur.babey@heig-vd.ch>"]
license = "3-Clause BSD License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
